# TerrainEngine

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  compile.bat  premake5.lua
dependencies/includes/glad/: glad.h
engine/: CMakeLists.txt  premake5.lua
engine/include/: TerrainEngine.h
engine/include/TerrainEngine/: Application.h  Camera.h  CameraController.h  CommonTypes.h  Core.h  Renderer.h  Scene.h  TerrainEngine.h
engine/res/shaders/: vertex.glsl
engine/src/: Application.cpp  Func.cpp  Func.h  TerrainEngine.cpp  TerrainEngine.h  engine.cpp  engine.h  utils.h
engine/src/Core/: Application.cpp  Application.h  Core.cpp  Input.cpp  Renderer.cpp
engine/src/Core/Window/: Window.h
engine/src/Core/Window/GLFWWindow/: Window.cpp  Window.h
engine/src/Entities/: Camera.h  Material.cpp  Material.h  Mesh.cpp
engine/src/Graphics/OpenGL/: Texture.h  VertexBuffer.cpp
engine/src/Renderer/: Camera.cpp  CameraController.cpp  Renderer.cpp
engine/src/TerrainEngine/: TerrainEngin.cpp
engine/src/core/: Application.cpp  Application.h  Input.cpp  Input.h  KeyCodes.h  Layer.cpp  Layer.h  Log.h  Scene.cpp  Scene.h  Time.cpp  Time.h  Window.cpp  Window.h
engine/src/core/platform/glfw/: GLFWCallback.cpp  GLFWCallback.h  GLFWKeyCodeMapper.h  GLFWWindow.cpp  GLFWWindow.h
engine/src/graphics/: Drawable.cpp  Drawable.h  Material.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
engine/src/graphics/api/opengl/: OpenGLMesh.cpp  OpenGLMesh.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h
engine/src/graphics/camera/: Camera.h  CameraController.h  PerspectiveCamera.cpp  PerspectiveCamera.h
engine/src/graphics/drawable/: Drawable.h  Material.h
engine/src/graphics/opengl/: glad.c
engine/src/scene/: CameraController.h  Scene.cpp  Scene.h
engine/src/scene/entity/: Entity.h  Material.h  Transform.h
engine/src/terrains/voxel/: Chunk.h  Voxel.h  VoxelChunk.cpp  VoxelChunk.h  VoxelChunkManager.cpp  VoxelChunkManager.h  VoxelWorld.cpp  VoxelWorld.h
res/shaders/: fragment.glsl  vertex.glsl
sandbox/: CMakeLists.txt  premake5.lua
sandbox/src/: SandboxApp.cpp  SandboxApp.h  SandboxApplication.cpp  SandboxApplication.h  SandboxLayer.cpp  SandboxLayer.h  WorldScene.h  main.cpp
src/: func.cpp  func.h  main.cpp
src/engine/: utils.h
src/engine/Entities/: Camera.cpp  Camera.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h
src/engine/Graphics/OpenGL/: Defines.h  IndexBuffer.cpp  IndexBuffer.h  Shader.cpp  Shader.h  Texture.cpp  Utils.h  VertexArray.cpp  VertexArray.h  VertexBuffer.h
src/engine/Graphics/Renderer/: OpenGLRenderer.cpp  Renderer.h
src/engine/core/: Application.cpp  Application.h  GLFWWindow.cpp  GLFWWindow.h  Input.cpp  Input.h  KeyCodes.h  Time.cpp  Time.h
src/engine/core/Window/: Window.cpp  Window.h
src/engine/core/Window/GLFWWindow/: Events.cpp  Events.h  Window.cpp  Window.h
